RESOLVED FIXED83452
combine two arrays in SQLException.cpp into one
https://bugs.webkit.org/show_bug.cgi?id=83452
Summary combine two arrays in SQLException.cpp into one
Lu Guanqun
Reported 2012-04-08 21:25:14 PDT
combine two arrays in SQLException.cpp into one, this helps to remove one FIXME in the file.
Attachments
Patch (3.79 KB, patch)
2012-04-08 21:29 PDT, Lu Guanqun
no flags
Lu Guanqun
Comment 1 2012-04-08 21:29:14 PDT
WebKit Review Bot
Comment 2 2012-04-09 22:54:28 PDT
Comment on attachment 136180 [details] Patch Clearing flags on attachment: 136180 Committed r113687: <http://trac.webkit.org/changeset/113687>
WebKit Review Bot
Comment 3 2012-04-09 22:54:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.