combine two arrays in SQLException.cpp into one https://bugs.webkit.org/show_bug.cgi?id=83452

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* Modules/webdatabase/SQLException.cpp:
(SQLExceptionNameDescription):
(WebCore):
(WebCore::SQLException::initializeDescription):

Canonical link: https://commits.webkit.org/100997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113687 268f45cc-cd09-0410-ab3c-d52691b4dbfc